🚀 Final Merge Phase 1

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="daftar_span">Belum punya akun? Daftar</string>
     <string name="cbSK">Dengan mendaftar, Anda menyetujui Syarat &amp; Ketentuan dan Kebijakan Privasi</string>
     <string name="masuk_span">Sudah mempunyai akun? Masuk</string>
-    <string name="user_placeholder_greetings">Halo, Zauhair!</string>
+    <string name="user_placeholder_greetings">Halo, Raihan Parama!</string>
     <string name="user_placeholder_location">Malang, Jawa Timur</string>
     <string name="lihat_selengkapnya">lihat selengkapnya</string>
     <string name="lihat_semua">lihat semua</string>
